Source/JavaScriptCore/inspector/JSGlobalObjectScriptDebugServer.h
@@ -42,8 +42,6 @@ public:
 
     JSC::JSGlobalObject& globalObject() const { return m_globalObject; }
 
-    virtual void recompileAllJSFunctions() override;
-
 private:
     virtual ListenerSet& getListeners() override { return m_listeners; }
     virtual void didPause(JSC::JSGlobalObject*) override { }
